Header and Story Thumbs line overlaping fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -191,7 +191,7 @@ h2,h3{
     top:0;
     width: 100%;
     background-color: #ffffff;
-    z-index: 5;
+    z-index: 6;
     transition: top .5s;
     padding: 10px 0px;
     .max-width{
@@ -289,7 +289,7 @@ h2,h3{
     width: 100%;
     height: 20px;
     background-color: $secondaryColour;
-    z-index: 4.5;
+    z-index: 5;
     transition: top .5s;
     padding: 15px 0px;
     transition: height .3s, top .8s;
@@ -377,12 +377,13 @@ h2,h3{
 // MAIN CONTENT
 
 #mainContent{
+    position: relative;
     width: 100%;
     margin-top: 110px;
     min-height: 500px;
+    z-index: 1;
     .articleThumbs{
         width: max-content;
-        z-index: 1;
         a{
             position: relative;
             margin-right: 2px;
